# ChangeLog for dev-perl/Config-Simple
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Config-Simple/ChangeLog,v 1.11 2005/07/17 12:34:58 voxus Exp $

  17 Jul 2005; Konstantin Arkhipov <voxus@gentoo.org>
  Config-Simple-4.58.ebuild:
  Added to ~amd64.

*Config-Simple-4.58 (24 Apr 2005)

  24 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  +Config-Simple-4.58.ebuild:
  clean and bump

  07 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  Config-Simple-4.57.ebuild:
  Stable on ppc.

  30 Mar 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  Config-Simple-4.57.ebuild:
  Stable on sparc

  21 Jan 2005; Michael Cummings <mcummings@gentoo.org>
  Config-Simple-4.57.ebuild:
  Unmasking for x86

*Config-Simple-4.57 (28 Oct 2004)

  28 Oct 2004; Michael Cummings <mcummings@gentoo.org>
  +Config-Simple-4.57.ebuild:
  New version on cpan; bugs 7793 & 6252 on rt

  02 Sep 2004; <pvdabeel@gentoo.org> Config-Simple-4.55.ebuild,
  Config-Simple-4.56.ebuild:
  PPC stable profile update

*Config-Simple-4.56 (30 Jul 2004)

  30 Jul 2004; Michael Cummings <mcummings@gentoo.org>
  +Config-Simple-4.56.ebuild:
  New version on CPAN

  14 Jun 2004; David Holm <dholm@gentoo.org> Config-Simple-4.55.ebuild:
  Added to ~ppc.

*Config-Simple-4.55 (13 Jun 2004)

  13 Jun 2004; Michael Cummings <mcummings@gentoo.org>
  Config-Simple-4.55.ebuild, metadata.xml:
  Ebuild submitted by Scott Jones <m0rbid@qwest.net> in bug 52729 in support of
  bug 52728.
