@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/config-general/config-general-2.30.ebuild,v 1.1 2005/11/12 15:26:28 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/config-general/config-general-2.30.ebuild,v 1.2 2006/01/13 18:52:17 mcummings Exp $
 
 
 inherit perl-module
@@ -16,5 +16,5 @@ SLOT="0"
 LICENSE="Artistic"
 SRC_TEST="do"
 
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 sparc x86"
 IUSE=""
