@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/config-general
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/config-general/ChangeLog,v 1.17 2005/11/26 01:17:33 tgall Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/config-general/ChangeLog,v 1.18 2006/01/13 18:52:17 mcummings Exp $
+
+  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
+  config-general-2.30.ebuild:
+  Marking stable sparc x86
 
   25 Nov 2005; Tom Gal <tgall@gentoo.org> config-general-2.27.ebuild:
   stable on ppc64
