@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Config-Simple
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Config-Simple/ChangeLog,v 1.11 2005/07/17 12:34:58 voxus Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Config-Simple/ChangeLog,v 1.12 2006/01/13 18:53:02 mcummings Exp $
+
+  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
+  Config-Simple-4.58.ebuild:
+  Marking stable sparc x86
 
   17 Jul 2005; Konstantin Arkhipov <voxus@gentoo.org>
   Config-Simple-4.58.ebuild:
